--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <!--Hola-->>
+    <h1>Hola, este es el primer cambio</h1>
     <nav class="topHeader">
       <a href="" class="logo">
-        <img width="50" height="50" src="LOGOS/logo_upc_red.png" alt=""/>
+        <img width="50" height="50" src="imagenes/logo_upc_red.png" alt=""/>
       <ul class="Menu-Horizontal">
         <li><a href="">Promociones</a></li>
         <li>
